k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multivac
  labels:
    name: multivac
