k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-experiment
  namespace: multivac
  labels:
    app: kube-experiment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-experiment
  template:
    metadata:
      labels:
        app: kube-experiment
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: kube-experiment
        image: paulograbin/kube-experiment:latest
        ports:
        - containerPort: 8080
          name: http
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 10"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 1
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 1
          timeoutSeconds: 3
