k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-experiment
  namespace: multivac
  labels:
    app: kube-experiment
spec:
  type: ClusterIP
  selector:
    app: kube-experiment
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
