k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kube-experiment-gateway
  namespace: multivac
  labels:
    app: kube-experiment
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kube-experiment.multivac.local"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kube-experiment-tls
    hosts:
    - "kube-experiment.multivac.local"
