k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-experiment
  namespace: multivac
  labels:
    app: kube-experiment
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: kube-experiment.multivac.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-experiment
            port:
              number: 80
