k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kube-experiment
  namespace: multivac
  labels:
    app: kube-experiment
spec:
  hosts:
  - "kube-experiment.multivac.local"
  gateways:
  - kube-experiment-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-experiment
        port:
          number: 80
